[project]
name = "permutation_matrix"
version = "0.1.0"
description = "Linear Approximation of the CSSP"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "torch",
    "torchvision"
]
